# Multi-Agentic-Research-Assistant

./: LICENSE  README.md  pyproject.toml
agents/: base_agent.py  citations_agent.py  context_agent.py  insight_agent.py  paper_reader.py
api/: main.py
tools/: arxiv_tool.py  citation_tool.py  pdf_reader.py  wikipedia_tool.py
ui/: app.py
